--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
     "curly": "off",
     "eqeqeq": "warn",
     "no-throw-literal": "warn",
-    "semi": "off"
+    "semi": "off",
+    "no-extra-semi":"warn"
   },
   "ignorePatterns": ["out", "dist", "**/*.d.ts"]
 }
