feat: Add finish command

--- a/package.json
+++ b/package.json
@@ -19,9 +19,21 @@
         "command": "simple-merge.diff",
         "title": "3 pane merge",
         "icon": "$(git-merge)"
+      },
+      {
+        "command": "simple-merge.finish",
+        "title": "Finish merge",
+        "icon": "$(check)"
       }
     ],
     "menus": {
+      "editor/title": [
+        {
+          "command": "simple-merge.finish",
+          "when": "!editorReadonly && simple-merge.diffing",
+          "group": "navigation"
+        }
+      ],
       "scm/resourceState/context": [
         {
           "command": "simple-merge.diff",
@@ -43,19 +55,19 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.31.0",
     "@types/glob": "^7.1.4",
     "@types/mocha": "^9.0.0",
     "@types/node": "14.x",
+    "@types/vscode": "^1.64.0",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
+    "@vscode/test-electron": "^1.6.2",
     "eslint": "^8.1.0",
     "glob": "^7.1.7",
     "mocha": "^9.1.3",
-    "typescript": "^4.4.4",
     "ts-loader": "^9.2.5",
+    "typescript": "^4.4.4",
     "webpack": "^5.52.1",
-    "webpack-cli": "^4.8.0",
-    "@vscode/test-electron": "^1.6.2"
+    "webpack-cli": "^4.8.0"
   }
 }
