--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Alternative way of merging files in VSCode.",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.31.0"
+    "vscode": "^1.62.0"
   },
   "categories": [
     "Other"
@@ -44,10 +44,10 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "yarn run package",
     "compile": "webpack",
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
+    "build": "yarn package && vsce package",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
@@ -58,7 +58,7 @@
     "@types/glob": "^7.1.4",
     "@types/mocha": "^9.0.0",
     "@types/node": "14.x",
-    "@types/vscode": "^1.64.0",
+    "@types/vscode": "1.62.0",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "@vscode/test-electron": "^1.6.2",
